	  (find_name): Add encoding argument. Guess the page's encoding from
	  its filesystem location (or use encoding if supplied), and add an
	  iconv command to recode it to UTF-8.
	* man/man1/lexgrog.man1 (SYNOPSIS, OPTIONS): Document --encoding.
	* src/straycats.c (check_for_stray): Guess the page's encoding from
	  its filesystem location, and add an iconv command to recode it to
	  UTF-8.
	* src/whatis.c (display): Convert output from UTF-8 to locale
	  charset.
	  (main): Initialise iconv descriptor.
	* include/manconfig.h.in (find_name): Update prototype.
	  (lang_dir): Add prototype.
	* configure.ac: Call AM_ICONV.
	* src/Makefile.in (mandb, lexgrog): Add encodings.o.
	* src/Makefile.in (whatis, apropos): Add encodings.o and
	  $(LIBICONV).

	* src/encodings.c (directory_table): Add Serbian -> ISO-8859-5.
	* src/lexgrog.l (cs_name, hu_name): Expand character classes
	  containing non-ASCII characters into the form (a|b|...); flex
	  doesn't understand Unicode well enough to deal with them
	  otherwise.
	  (cs_name, ru_name): Add more possible translations.
	  (ko_name, sk_name, sr_name, tr_name, zh_CN_name, zh_TW_name): Add.
	  (find_name_decompressed): Ignore exit status from decompressor
	  pipeline; iconv may exit non-zero on misencoded pages, but if we
	  manage to extract a whatis from it anyway then it doesn't really
	  matter.

	* src/whatis.c (usage): Document -L/--locale.
	* man/man1/apropos.man1 (SYNOPSIS, OPTIONS): Likewise.
	* man/man1/whatis.man1 (SYNOPSIS, OPTIONS): Likewise.

	* docs/NEWS: Document this.

Sun Sep  2 01:21:11 BST 2007  Colin Watson  <cjwatson@debian.org>

	Add limited character set aliasing support.

	* src/encodings.c (charset_alias_table): New table for common
	  character set aliases.
	  (get_canonical_charset_name): New function to inspect
	  charset_alias_table.
	  (get_page_encoding): Use get_canonical_charset_name. Adjust FHS
	  commentary, since we now support its craziness.